<resources>
    <string name="app_name">constellation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_constell_all">综合指数:</string>
    <string name="text_constell_health">健康指数:</string>
    <string name="text_constell_love">爱情指数:</string>
    <string name="text_constell_work">工作指数:</string>
    <string name="text_constell_money">财运指数:</string>
</resources>