<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.TodayFragment">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/text_constell_size"
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/text_constell_size"
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/text_constell_size"
                android:id="@+id/tv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/text_constell_size"
                android:id="@+id/tv_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/text_constell_size"
                android:id="@+id/tv_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="@dimen/text_constell_size"
                android:id="@+id/tv_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/text_constell_size"
                    android:text="@string/text_constell_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progressDrawable="@drawable/progressdiv"
                    android:padding="10dp"
                    android:max="100"
                    android:id="@+id/sb_all"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/text_constell_size"
                    android:text="@string/text_constell_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progressDrawable="@drawable/progressdiv"
                    android:max="100"
                    android:padding="10dp"
                    android:id="@+id/sb_health"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/text_constell_size"
                    android:text="@string/text_constell_love"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:padding="10dp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progressDrawable="@drawable/progressdiv"
                    android:max="100"
                    android:id="@+id/sb_love"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/text_constell_size"
                    android:text="@string/text_constell_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:padding="10dp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progressDrawable="@drawable/progressdiv"
                    android:max="100"
                    android:id="@+id/sb_work"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/text_constell_size"
                    android:text="@string/text_constell_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:padding="10dp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progressDrawable="@drawable/progressdiv"
                    android:max="100"
                    android:id="@+id/sb_money"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>